--- a/app/src/main/res/layout/activity_detail_articles.xml
+++ b/app/src/main/res/layout/activity_detail_articles.xml
@@ -95,7 +95,8 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_image"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    app:layout_constraintDimensionRatio="1.416:1"
                     android:layout_marginTop="16dp"
                     app:cardCornerRadius="0dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +105,7 @@
                     <ImageView
                         android:id="@+id/img_articles"
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"
+                        android:layout_height="match_parent"
                         android:scaleType="centerCrop"
                         tools:src="@tools:sample/avatars" />
 
