--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -20,7 +20,7 @@
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/secPrimary"
             android:fontFamily="@font/montserrat_semi_bold"
-            android:text="Enter your email to verify your email."
+            android:text="Enter your email to verify."
             android:textSize="18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,12 +47,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="160dp"
+            android:layout_marginTop="200dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/montserrat_bold"
             android:text="Reset"
             android:textColor="@color/secondaryColor"
-            android:textSize="40dp"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -78,10 +78,11 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btnBack"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="25dp">
 
                     <androidx.appcompat.widget.LinearLayoutCompat
-                        android:layout_width="170dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/cardview_border_stroke"
                         android:gravity="center">
@@ -98,16 +99,18 @@
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="1dp"
+                android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
+                android:layout_marginStart="4dp"
                 android:foreground="?attr/selectableItemBackground">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btnSend"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/cardview_border">
+                    android:background="@drawable/cardview_border"
+                    app:cardCornerRadius="25dp">
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
