--- a/app/src/main/res/layout/articles_items.xml
+++ b/app/src/main/res/layout/articles_items.xml
@@ -20,8 +20,9 @@
         <ImageView
             android:id="@+id/img_articles"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
             android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="1.416:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
