--- a/app/src/main/res/drawable/cardview_border_disabled.xml
+++ b/app/src/main/res/drawable/cardview_border_disabled.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/disabled" />
+    <solid android:color="@color/lightGray2" />
 
     <corners android:radius="25dp" />
 </shape>
