--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -18,8 +18,6 @@
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:navigationIcon="@drawable/icon_back"
-            app:navigationIconTint="@color/primaryColor"
             android:backgroundTint="@color/contentColor"
             app:titleTextColor="@color/white"
             app:title="Edit Profile"
@@ -96,37 +94,45 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/etFirstName" />
 
-                <com.example.capstoneproject.ui.customView.emailEditText
-                    android:id="@+id/etEmail"
-                    style="@style/EditText"
+                <LinearLayout
+                    android:id="@+id/mobilelinear"
                     android:layout_width="0dp"
-                    android:layout_height="48dp"
+                    android:layout_height="50dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
-                    android:hint="Email"
-                    android:imeOptions="actionNext"
-                    android:textSize="14sp"
-                    android:focusable="false"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etLastName" />
+                    app:layout_constraintTop_toBottomOf="@+id/etLastName">
 
-                <com.example.capstoneproject.ui.customView.mobileEditText
-                    android:id="@+id/etMobile"
-                    style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:hint="Mobile"
-                    android:focusable="false"
-                    android:imeOptions="actionNext"
-                    android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etEmail" />
+                    <EditText
+                        android:id="@+id/etMobileFormat"
+                        style="@style/EditText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="8dp"
+                        android:enabled="false"
+                        android:focusable="false"
+                        android:hint="+62"
+                        android:imeOptions="actionNext"
+                        android:paddingEnd="24dp"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        tools:ignore="RtlSymmetry" />
+
+                    <com.example.capstoneproject.ui.customView.mobileEditText
+                        android:id="@+id/etMobile"
+                        style="@style/EditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:focusable="false"
+                        android:hint="Mobile"
+                        android:inputType="number"
+                        android:imeOptions="actionNext"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/linearLayoutButton"
@@ -137,7 +143,7 @@
                     android:layout_marginEnd="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etMobile">
+                    app:layout_constraintTop_toBottomOf="@+id/mobilelinear">
 
                     <FrameLayout
                         android:layout_width="0dp"
