--- a/app/src/main/res/layout/activity_otpemail.xml
+++ b/app/src/main/res/layout/activity_otpemail.xml
@@ -6,23 +6,25 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     tools:context=".ui.otp.OTPEmailActivity"
-    android:backgroundTint="@color/primaryColor">
+    android:background="@color/primaryColor">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:background="@color/primaryColor">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
-            android:layout_marginTop="160dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginEnd="16dp"
             android:fontFamily="@font/montserrat_bold"
             android:text="Verification"
             android:textColor="@color/secondaryColor"
-            android:textSize="40dp"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,32 +34,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:backgroundTint="@color/secPrimary"
             android:fontFamily="@font/montserrat_semi_bold"
-            android:text="Enter the OTP code we've sent to your email address:"
-            android:textSize="18dp"
+            android:text="Enter the OTP code we've sent to your email address."
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:gravity="center"
-            android:id="@+id/showEmail"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/contentColor"
-            android:textStyle="bold"
-            />
 
         <com.example.capstoneproject.ui.customView.otpEditText
             android:id="@+id/etOtp"
             android:focusable="false"
             style="@style/EditText"
-            android:layout_width="360dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
@@ -72,12 +64,18 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/btnverifydotp"
-            android:layout_width="300sp"
+            android:layout_width="match_parent"
             android:layout_height="48dp"
+
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
             app:cardCornerRadius="25dp"
             app:cardElevation="0dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etOtp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
@@ -98,24 +96,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="168dp"
             android:gravity="center"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout">
+            app:layout_constraintTop_toBottomOf="@+id/btnverifydotp">
 
             <TextView
                 android:id="@+id/signupText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/montserrat_medium"
                 android:padding="4dp"
                 android:text="Send another code?"
                 android:textAlignment="center"
                 android:textColor="@color/secPrimary"
                 android:textSize="14sp"
-                android:layout_gravity="center"
-                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -123,14 +121,14 @@
                 android:id="@+id/reSendHere"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="re-send"
                 android:textColor="@color/contentColor"
-                android:textStyle="italic"
                 android:textSize="14sp"
-                android:fontFamily="@font/montserrat_medium"
+                android:textStyle="italic"
                 app:layout_constraintStart_toEndOf="@+id/signupText"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </LinearLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
