--- a/app/src/main/res/layout/activity_otpmobile.xml
+++ b/app/src/main/res/layout/activity_otpmobile.xml
@@ -4,27 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/primaryColor"
     android:fillViewport="true"
-    tools:context=".ui.otp.OTPMobileActivity"
-    android:backgroundTint="@color/primaryColor">
+    tools:context=".ui.otp.OTPMobileActivity">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:layout_height="wrap_content"
+        android:background="@color/primaryColor">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="160dp"
+            android:layout_marginTop="200dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/montserrat_bold"
             android:text="Verification"
             android:textColor="@color/secondaryColor"
-            android:textSize="40dp"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,37 +36,25 @@
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/secPrimary"
             android:fontFamily="@font/montserrat_semi_bold"
-            android:text="Enter the OTP code we've sent to your mobile number:"
-            android:textSize="18dp"
+            android:text="Enter the OTP code we've sent to your mobile number."
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="13sp"
-            android:gravity="center"
-            android:id="@+id/showMobile"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/contentColor"
-            android:textStyle="bold"
-            />
-
         <com.example.capstoneproject.ui.customView.otpEditText
             android:id="@+id/etOtp"
-            android:focusable="false"
             style="@style/EditText"
-            android:layout_width="360dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
+            android:focusable="false"
             android:hint="OTP code"
-            android:inputType="number"
-            android:layout_gravity="center"
             android:imeOptions="actionNext"
+            android:inputType="number"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,12 +62,17 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/btnverifydotp"
-            android:layout_width="300sp"
+            android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
             app:cardCornerRadius="25dp"
             app:cardElevation="0dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etOtp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
@@ -101,24 +93,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="168dp"
             android:gravity="center"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout">
+            app:layout_constraintTop_toBottomOf="@+id/btnverifydotp">
 
             <TextView
                 android:id="@+id/signupText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/montserrat_medium"
                 android:padding="4dp"
                 android:text="Send another code?"
                 android:textAlignment="center"
                 android:textColor="@color/secPrimary"
                 android:textSize="14sp"
-                android:layout_gravity="center"
-                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -126,14 +118,14 @@
                 android:id="@+id/reSendhere"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="re-send"
                 android:textColor="@color/contentColor"
-                android:textStyle="italic"
                 android:textSize="14sp"
-                android:fontFamily="@font/montserrat_medium"
+                android:textStyle="italic"
                 app:layout_constraintStart_toEndOf="@+id/signupText"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </LinearLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
