--- a/app/src/main/res/layout/activity_wifi.xml
+++ b/app/src/main/res/layout/activity_wifi.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primaryColor"
     tools:context=".ui.wifi.WifiActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -19,63 +20,73 @@
             android:layout_height="?attr/actionBarSize"
             android:backgroundTint="@color/contentColor"
             app:navigationIcon="@drawable/icon_back"
-            app:navigationIconTint="@color/primaryColor"
             app:title="Wownet Hotspot"
-            app:titleTextColor="@color/white"
-            app:titleCentered="true" />
+            app:titleCentered="true"
+            app:titleTextColor="@color/white" />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_current_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/primaryColor"
-        android:clickable="true"
-        app:borderWidth="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        app:srcCompat="@drawable/icon_current_location" />
-
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/card_hotspot"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        tools:context=".ui.maps.MapsFragment" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_hotspot"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:background="@color/lightPrimaryColor"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        tools:ignore="MissingConstraints">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_current_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/primaryColor"
+            android:clickable="true"
+            android:focusable="true"
+            app:borderWidth="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/icon_current_location"
+            app:tint="@color/secondaryColor" />
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:context=".ui.maps.MapsFragment" />
+
+        <TextView
+            android:id="@+id/tvCurrentPlan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="N E A R E S T  H O T S P O T  L O C A T I O N"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/map" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/card_plan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:background="@drawable/article_item_bg">
+            android:layout_marginTop="8dp"
+            android:background="@drawable/item_bg"
+            app:layout_constraintTop_toBottomOf="@+id/tvCurrentPlan">
 
             <TextView
-                android:id="@+id/hotspot"
-                android:layout_width="0dp"
+                android:id="@+id/tv_empty_hotspot"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nearest Hotspot Location"
+                android:fontFamily="@font/montserrat_semi_bold"
+                android:text="Sorry, no hotspots nearby"
                 android:textColor="@color/secondaryColor"
-                android:textSize="18sp"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -83,24 +94,13 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_hotspot"
                 android:layout_width="match_parent"
-                android:layout_height="210dp"
-                android:layout_marginTop="12dp"
-                app:layout_constraintTop_toBottomOf="@id/hotspot" />
-
-            <TextView
-                android:id="@+id/tv_empty_hotspot"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sorry, no hotspots nearby"
-                android:textColor="@color/secondaryColor"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/hotspot" />
-
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
