--- a/app/src/main/res/layout/home_article_items.xml
+++ b/app/src/main/res/layout/home_article_items.xml
@@ -29,34 +29,36 @@
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/publish_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sample_publish_date"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginStart="8dp"
-        android:textColor="@color/secondaryColor"
-        android:textSize="14sp"
-        app:layout_constraintTop_toTopOf="@+id/card_image"
-        app:layout_constraintStart_toEndOf="@+id/card_image" />
-
-    <TextView
-        android:id="@+id/title_articles"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:textSize="16sp"
-        android:fontFamily="@font/montserrat_medium"
-        android:text="@string/sample_title_articles"
-        android:textColor="@color/secondaryColor"
+        android:layout_marginHorizontal="8dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_detail"
         app:layout_constraintStart_toEndOf="@+id/card_image"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/publish_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sample_publish_date"
+            android:fontFamily="@font/montserrat_medium"
+            android:textColor="@color/secondaryColor"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/title_articles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:textSize="16sp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="@string/sample_title_articles"
+            android:textColor="@color/secondaryColor" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <ImageView
         android:id="@+id/btn_detail"
