--- a/app/src/main/res/layout/hotspot_items.xml
+++ b/app/src/main/res/layout/hotspot_items.xml
@@ -1,89 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/primaryColor"
-    app:cardCornerRadius="12dp"
-    app:cardElevation="0dp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent">
+    android:layout_marginLeft="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginRight="16dp"
+    android:backgroundTint="@color/primaryColor">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="4dp">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:backgroundTint="@color/primaryColor"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_image"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
-            app:cardCornerRadius="8dp"
-            android:backgroundTint="@color/primaryColor"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints">
+        <ImageView
+            android:id="@+id/img_hotspot"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            tools:src="@tools:sample/avatars" />
 
-            <ImageView
-                android:id="@+id/img_hotspot"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                tools:src="@tools:sample/avatars" />
+    </androidx.cardview.widget.CardView>
 
-        </androidx.cardview.widget.CardView>
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_detail"
+        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintStart_toEndOf="@+id/card_image"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginHorizontal="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/card_image"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_detail">
-
-            <TextView
-                android:id="@+id/name_hotspot"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Wownet Hotspot Pattimura"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@color/secondaryColor" />
-
-            <TextView
-                android:id="@+id/location_hotspot"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Jalan Mulawarman, Kecamantan Pusat, Balikpapan"
-                android:textColor="@color/secondaryColor" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/btn_detail"
+        <TextView
+            android:id="@+id/name_hotspot"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="0dp"
-            android:backgroundTint="@color/secwhite"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="Wownet Hotspot Pattimura"
+            android:textColor="@color/secondaryColor"
+            android:textSize="16sp" />
 
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="center"
-                    android:layout_marginHorizontal="6dp"
-                    android:src="@drawable/icon_expand_more"
-                    app:tint="@color/secondaryColor" />
-        </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/location_hotspot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="@font/montserrat_medium"
+            android:maxLines="2"
+            android:text="Jalan Mulawarman, Kecamantan Pusat, Balikpapan"
+            android:textColor="@color/secondaryColor"
+            android:textSize="14sp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
-</androidx.cardview.widget.CardView>
+    <ImageView
+        android:id="@+id/btn_detail"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center"
+        android:src="@drawable/icon_expand_more"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/secondaryColor" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
