--- a/app/src/main/res/layout/activity_otpemail.xml
+++ b/app/src/main/res/layout/activity_otpemail.xml
@@ -58,6 +58,8 @@
             android:layout_gravity="center"
             android:imeOptions="actionNext"
             android:textSize="14sp"
+            android:gravity="center"
+            android:textColor="@color/secondaryColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewlogin" />
