--- a/app/src/main/res/layout/activity_otpmobile.xml
+++ b/app/src/main/res/layout/activity_otpmobile.xml
@@ -56,6 +56,8 @@
             android:imeOptions="actionNext"
             android:inputType="number"
             android:textSize="14sp"
+            android:gravity="center"
+            android:textColor="@color/secondaryColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewlogin" />
