--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,6 +52,7 @@
             android:hint="First Name"
             android:imeOptions="actionNext"
             android:textSize="14sp"
+            android:textColor="@color/secondaryColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -68,6 +69,7 @@
             android:hint="Last Name"
             android:imeOptions="actionNext"
             android:textSize="14sp"
+            android:textColor="@color/secondaryColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etFirstName" />
@@ -84,6 +86,7 @@
             android:hint="Email"
             android:imeOptions="actionNext"
             android:textSize="14sp"
+            android:textColor="@color/secondaryColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etLastName" />
@@ -112,7 +115,8 @@
                 android:hint="Password"
                 android:imeOptions="actionNext"
                 android:inputType="textPassword"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:textColor="@color/secondaryColor" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
