--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -45,7 +45,7 @@
             android:maxWidth="250dp"
             android:padding="10dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@android:color/white"
+            android:textColor="@color/secondaryColor"
             app:layout_constraintStart_toStartOf="@+id/tvMessenger"
             app:layout_constraintTop_toBottomOf="@id/tvMessenger"
             tools:text="This is a message" />
@@ -103,7 +103,7 @@
             android:maxWidth="250dp"
             android:padding="10dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@android:color/white"
+            android:textColor="@color/secondaryColor"
             app:layout_constraintEnd_toEndOf="@+id/tvMessengerRight"
             app:layout_constraintTop_toBottomOf="@id/tvMessengerRight"
             tools:text="This is a message" />
