--- a/app/src/main/res/layout/activity_biometric.xml
+++ b/app/src/main/res/layout/activity_biometric.xml
@@ -15,6 +15,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
+            android:fontFamily="@font/montserrat_semi_bold"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
