--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -18,6 +18,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
+            android:fontFamily="@font/montserrat_semi_bold"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -35,6 +36,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        app:cardElevation="0dp"
         app:cardCornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +46,6 @@
             android:id="@+id/cardPackageFrom"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/plan_gold"
             android:minHeight="175dp"
             app:layout_constraintTop_toBottomOf="@+id/content">
 
@@ -55,7 +56,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
-                android:text="Gold"
                 android:textColor="@color/gold"
                 android:textSize="50sp"
                 android:textStyle="bold"
@@ -68,7 +68,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="Speed up to 50mb/s"
                 android:textColor="@color/gold"
                 android:textSize="11sp"
                 android:textStyle="bold"
@@ -81,7 +80,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="Service date : 15  September 2023"
                 android:textColor="@color/gold"
                 android:textSize="11sp"
                 android:textStyle="bold"
@@ -94,7 +92,6 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="Location : Dharmasushada Indah VI No. 100, Surabaya"
                 android:textColor="@color/gold"
                 android:textSize="11sp"
                 android:textStyle="bold"
@@ -111,7 +108,6 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/montserrat_bold"
         android:gravity="center"
-        android:text="Change Plan To"
         android:textColor="@color/secondaryColor"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -268,6 +264,7 @@
                 android:textColor="@color/secondaryColor"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:fontFamily="@font/montserrat_bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
