--- a/app/src/main/res/layout/activity_usage.xml
+++ b/app/src/main/res/layout/activity_usage.xml
@@ -15,6 +15,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
+            android:fontFamily="@font/montserrat_semi_bold"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -66,6 +67,7 @@
                 tools:layout_editor_absoluteX="-186dp">
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cardPlanElevation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -83,7 +85,6 @@
                         android:id="@+id/card_package"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/plan_silver"
                         android:minHeight="175dp"
                         app:layout_constraintTop_toBottomOf="@+id/content">
 
@@ -94,7 +95,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="32dp"
-                            android:text="Silver"
                             android:textColor="@color/silver"
                             android:textSize="50sp"
                             android:textStyle="bold"
@@ -108,7 +108,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="-8dp"
-                            android:text="Speed up to 30mb/s"
                             android:textColor="@color/silver"
                             android:textSize="11sp"
                             android:textStyle="bold"
@@ -121,7 +120,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:text="Service date : 15  September 2023"
                             android:textColor="@color/silver"
                             android:textSize="11sp"
                             android:textStyle="bold"
@@ -134,7 +132,6 @@
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:text="Location : Dharmasushada Indah VI No. 100, Surabaya"
                             android:textColor="@color/silver"
                             android:textSize="11sp"
                             android:textStyle="bold"
@@ -184,8 +181,10 @@
 
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/backgroundNoPlan"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:visibility="gone"
                         android:background="@drawable/plan_none"
                         android:minHeight="175dp"
                         app:layout_constraintTop_toBottomOf="@+id/content">
@@ -228,6 +227,7 @@
                         </androidx.appcompat.widget.LinearLayoutCompat>
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
