--- a/app/src/main/res/layout/activity_wifi.xml
+++ b/app/src/main/res/layout/activity_wifi.xml
@@ -85,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_semi_bold"
-                android:text="Sorry, no hotspots nearby"
+                android:text="Sorry, there are no hotspots nearby"
                 android:textColor="@color/secondaryColor"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
