--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primaryColor"
     tools:context=".ui.profile.ProfileFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -14,6 +15,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
+            android:fontFamily="@font/montserrat_semi_bold"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -172,6 +174,7 @@
                     tools:layout_editor_absoluteX="-186dp">
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/cardPlanElevation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
@@ -179,6 +182,7 @@
                         android:layout_marginEnd="16dp"
                         android:layout_marginBottom="16dp"
                         app:cardCornerRadius="15dp"
+                        app:cardElevation="0dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -189,7 +193,6 @@
                             android:id="@+id/card_package"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="@drawable/plan_silver"
                             android:minHeight="175dp"
                             app:layout_constraintTop_toBottomOf="@+id/content">
 
@@ -200,7 +203,6 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="32dp"
-                                android:text="Silver"
                                 android:textColor="@color/silver"
                                 android:textSize="50sp"
                                 android:textStyle="bold"
@@ -214,7 +216,6 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="-8dp"
-                                android:text="Speed up to 30mb/s"
                                 android:textColor="@color/silver"
                                 android:textSize="11sp"
                                 android:textStyle="bold"
@@ -227,7 +228,6 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                android:text="Service date : 15  September 2023"
                                 android:textColor="@color/silver"
                                 android:textSize="11sp"
                                 android:textStyle="bold"
@@ -240,7 +240,6 @@
                                 android:layout_width="200dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                android:text="Location : Dharmasushada Indah VI No. 100, Surabaya"
                                 android:textColor="@color/silver"
                                 android:textSize="11sp"
                                 android:textStyle="bold"
@@ -263,7 +262,6 @@
                                         android:id="@+id/btnChangePlan"
                                         android:layout_width="wrap_content"
                                         android:layout_height="match_parent"
-                                        android:backgroundTint="@color/silver"
                                         android:foreground="?attr/selectableItemBackground"
                                         app:cardCornerRadius="15dp"
                                         app:cardElevation="0dp">
@@ -272,15 +270,14 @@
                                             android:id="@+id/btnChangePlanStyle"
                                             android:layout_width="wrap_content"
                                             android:layout_height="match_parent"
-                                            android:background="@drawable/cardview_change_plan_border"
                                             android:gravity="center"
                                             tools:ignore="TooDeepLayout">
 
                                             <TextView
+                                                android:id="@+id/tvChangePlan"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:fontFamily="@font/montserrat_semi_bold"
-                                                android:text="Change Plan"
                                                 android:textColor="@color/white" />
 
                                         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -308,6 +305,8 @@
 
 
                         <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/backgroundNoPlan"
+                            android:visibility="gone"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@drawable/plan_none"
@@ -384,40 +383,6 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:id="@+id/tvHistoryPayment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:text="H I S T O R Y  P A Y M E N T"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/card_plan" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cardHistoryPayment"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/item_bg"
-                    app:layout_constraintTop_toBottomOf="@+id/tvHistoryPayment">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvHistoryPayment"
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginBottom="16dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:listitem="@layout/history_payment_items" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                     android:id="@+id/tvSocialMedia"
@@ -428,7 +393,7 @@
                     android:text="S O C I A L  M E D I A"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardHistoryPayment" />
+                    app:layout_constraintTop_toBottomOf="@+id/card_plan" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cardSocialMedia"
