--- a/app/src/main/res/layout/history_items.xml
+++ b/app/src/main/res/layout/history_items.xml
@@ -10,13 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:background="@color/primaryColor">
+        android:background="@color/lightPrimaryColor">
 
         <ImageView
             android:id="@+id/icon_data"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:src="@drawable/icon_data"
+            app:tint="@color/secondaryColor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
@@ -26,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Gold Package"
+            android:fontFamily="@font/montserrat_bold"
             android:textSize="18sp"
             android:textColor="@color/secondaryColor"
             android:textStyle="bold"
@@ -38,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Speed up to 50mb/s"
+            android:fontFamily="@font/montserrat_medium"
             android:layout_marginTop="2dp"
             android:textSize="14sp"
             android:textColor="@color/secondaryColor"
@@ -50,6 +53,7 @@
             android:layout_height="wrap_content"
             android:text="Rp 549.000"
             android:layout_marginTop="4dp"
+            android:fontFamily="@font/montserrat_medium"
             android:textSize="16sp"
             android:textColor="@color/secondaryColor"
             app:layout_constraintStart_toStartOf="@+id/tv_speed"
@@ -62,6 +66,7 @@
             android:background="@drawable/cardview_border"
             android:backgroundTint="@color/red"
             android:gravity="center"
+            android:foreground="?attr/selectableItemBackground"
             app:layout_constraintBottom_toTopOf="@+id/tv_date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -82,6 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="20 Desember 2023 20:13"
+            android:fontFamily="@font/montserrat_medium"
             app:layout_constraintBottom_toBottomOf="@+id/tv_price"
             app:layout_constraintEnd_toEndOf="parent" />
 
