--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,5 +27,6 @@
     <style name="tab_text" parent="Widget.Design.TabLayout">
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/montserrat_medium</item>
     </style>
 </resources>
