--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -63,80 +63,253 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <com.example.capstoneproject.ui.customView.nameEditText
-                    android:id="@+id/etFirstName"
-                    style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutFirstName"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="16dp"
                     android:hint="First Name"
-                    android:imeOptions="actionNext"
-                    android:focusable="false"
-                    android:textSize="14sp"
-                    android:textColor="@color/secondaryColor"
+                    app:hintTextColor="@color/contentColor"
+                    app:boxStrokeColor="@color/contentColor"
+                    app:boxStrokeErrorColor="@color/red"
+                    app:boxCornerRadiusTopStart="8dp"
+                    app:boxCornerRadiusTopEnd="8dp"
+                    app:boxCornerRadiusBottomStart="8dp"
+                    app:boxCornerRadiusBottomEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imgProfile" />
+                    app:layout_constraintTop_toBottomOf="@+id/imgProfile" >
 
-                <com.example.capstoneproject.ui.customView.nameEditText
-                    android:id="@+id/etLastName"
-                    style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:focusable="false"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etFirstName"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:imeOptions="actionNext"
+                        android:textSize="14sp"
+                        android:maxLines="1"
+                        android:textColor="@color/secondaryColor" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutLastName"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="6dp"
                     android:layout_marginEnd="16dp"
                     android:hint="Last Name"
-                    android:imeOptions="actionNext"
-                    android:textSize="14sp"
-                    android:textColor="@color/secondaryColor"
+                    app:hintTextColor="@color/contentColor"
+                    app:boxStrokeColor="@color/contentColor"
+                    app:boxStrokeErrorColor="@color/red"
+                    app:boxCornerRadiusTopStart="8dp"
+                    app:boxCornerRadiusTopEnd="8dp"
+                    app:boxCornerRadiusBottomStart="8dp"
+                    app:boxCornerRadiusBottomEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etFirstName" />
+                    app:layout_constraintTop_toBottomOf="@+id/layoutFirstName" >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etLastName"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:imeOptions="actionNext"
+                        android:textSize="14sp"
+                        android:maxLines="1"
+                        android:textColor="@color/secondaryColor" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutEmail"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginEnd="16dp"
+                    android:hint="Email"
+                    app:hintTextColor="@color/contentColor"
+                    app:boxStrokeColor="@color/contentColor"
+                    app:boxStrokeErrorColor="@color/red"
+                    app:boxCornerRadiusTopStart="8dp"
+                    app:boxCornerRadiusTopEnd="8dp"
+                    app:boxCornerRadiusBottomStart="8dp"
+                    app:boxCornerRadiusBottomEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/layoutLastName" >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:imeOptions="actionNext"
+                        android:inputType="none"
+                        android:textSize="14sp"
+                        android:maxLines="1"
+                        android:textColor="@color/secondaryColor" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
                     android:id="@+id/mobilelinear"
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="6dp"
                     android:layout_marginEnd="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etLastName">
+                    app:layout_constraintTop_toBottomOf="@+id/layoutEmail">
 
-                    <EditText
-                        android:id="@+id/etMobileFormat"
-                        style="@style/EditText"
-                        android:layout_width="wrap_content"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/layoutMobileFormat"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="64dp"
                         android:layout_height="match_parent"
-                        android:layout_marginEnd="8dp"
-                        android:focusable="false"
-                        android:hint="+62"
-                        android:imeOptions="actionNext"
-                        android:paddingEnd="24dp"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/secondaryColor"
-                        tools:ignore="RtlSymmetry" />
+                        app:boxCornerRadiusTopStart="8dp"
+                        app:boxCornerRadiusTopEnd="8dp"
+                        app:boxCornerRadiusBottomStart="8dp"
+                        app:boxCornerRadiusBottomEnd="8dp">
 
-                    <com.example.capstoneproject.ui.customView.mobileEditText
-                        android:id="@+id/etMobile"
-                        style="@style/EditText"
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/etMobileFormat"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:hint="+62"
+                            android:imeOptions="actionNext"
+                            android:inputType="none"
+                            android:cursorVisible="false"
+                            android:focusable="false"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/secondaryColor" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/layoutMobile"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:focusable="false"
+                        android:layout_marginStart="16dp"
                         android:hint="Mobile"
-                        android:inputType="number"
-                        android:imeOptions="actionNext"
-                        android:textSize="14sp"
-                        android:textColor="@color/secondaryColor"/>
+                        app:hintTextColor="@color/contentColor"
+                        app:boxStrokeColor="@color/contentColor"
+                        app:boxStrokeErrorColor="@color/red"
+                        app:boxCornerRadiusTopStart="8dp"
+                        app:boxCornerRadiusTopEnd="8dp"
+                        app:boxCornerRadiusBottomStart="8dp"
+                        app:boxCornerRadiusBottomEnd="8dp" >
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/etMobile"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:imeOptions="actionNext"
+                            android:inputType="number"
+                            android:textSize="14sp"
+                            android:maxLines="1"
+                            android:textColor="@color/secondaryColor" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
 
                 </LinearLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/dropdown_provinsi"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:hint="Provinsi"
+                    app:hintTextColor="@color/contentColor"
+                    app:boxStrokeColor="@color/contentColor"
+                    app:boxStrokeErrorColor="@color/red"
+                    app:boxCornerRadiusTopStart="8dp"
+                    app:boxCornerRadiusTopEnd="8dp"
+                    app:boxCornerRadiusBottomStart="8dp"
+                    app:boxCornerRadiusBottomEnd="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/mobilelinear">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/autoCompleteTextViewProvinsi"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:inputType="none"
+                        android:text="Pilih Provinsi"
+                        android:textSize="14sp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/dropdown_kota"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:enabled="false"
+                    android:hint="Kota"
+                    app:hintTextColor="@color/contentColor"
+                    app:boxStrokeColor="@color/contentColor"
+                    app:boxStrokeErrorColor="@color/red"
+                    app:boxCornerRadiusTopStart="8dp"
+                    app:boxCornerRadiusTopEnd="8dp"
+                    app:boxCornerRadiusBottomStart="8dp"
+                    app:boxCornerRadiusBottomEnd="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/dropdown_provinsi">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/autoCompleteTextViewKota"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:inputType="none"
+                        android:text="Pilih Kota"
+                        android:textSize="14sp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutAddress"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginEnd="16dp"
+                    android:hint="Address"
+                    app:hintTextColor="@color/contentColor"
+                    app:boxStrokeColor="@color/contentColor"
+                    app:boxStrokeErrorColor="@color/red"
+                    app:boxCornerRadiusTopStart="8dp"
+                    app:boxCornerRadiusTopEnd="8dp"
+                    app:boxCornerRadiusBottomStart="8dp"
+                    app:boxCornerRadiusBottomEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/dropdown_kota" >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:imeOptions="actionNext"
+                        android:textSize="14sp"
+                        android:maxLines="5"
+                        android:textColor="@color/secondaryColor" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/linearLayoutButton"
@@ -147,7 +320,7 @@
                     android:layout_marginEnd="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/mobilelinear">
+                    app:layout_constraintTop_toBottomOf="@+id/layoutAddress">
 
                     <FrameLayout
                         android:layout_width="0dp"
@@ -211,6 +384,7 @@
                         </androidx.cardview.widget.CardView>
                     </FrameLayout>
                 </androidx.appcompat.widget.LinearLayoutCompat>
+
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
