--- a/app/src/main/res/layout/activity_otpemail.xml
+++ b/app/src/main/res/layout/activity_otpemail.xml
@@ -17,10 +17,8 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="32dp"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="200dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginHorizontal="16dp"
             android:fontFamily="@font/montserrat_bold"
             android:text="Verification"
             android:textColor="@color/secondaryColor"
@@ -44,25 +42,92 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <com.example.capstoneproject.ui.customView.otpEditText
-            android:id="@+id/etOtp"
-            android:focusable="false"
-            style="@style/EditText"
+        <LinearLayout
+            android:id="@+id/layoutPin"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="16dp"
-            android:hint="OTP code"
-            android:inputType="number"
-            android:layout_gravity="center"
-            android:imeOptions="actionNext"
-            android:textSize="14sp"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="24dp"
             android:gravity="center"
-            android:textColor="@color/secondaryColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewlogin" />
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/textViewlogin">
+
+            <EditText
+                android:id="@+id/pin_1"
+                android:background="@drawable/border_default"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:maxLength="1"
+                android:textStyle="bold"
+                android:inputType="number"
+                android:layout_marginRight="4dp"/>
+
+            <EditText
+                android:id="@+id/pin_2"
+                android:background="@drawable/border_default"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:maxLength="1"
+                android:textStyle="bold"
+                android:inputType="number"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"/>
+
+            <EditText
+                android:id="@+id/pin_3"
+                android:background="@drawable/border_default"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:maxLength="1"
+                android:textStyle="bold"
+                android:inputType="number"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"/>
+
+            <EditText
+                android:id="@+id/pin_4"
+                android:background="@drawable/border_default"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:maxLength="1"
+                android:textStyle="bold"
+                android:inputType="number"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"/>
+
+            <EditText
+                android:id="@+id/pin_5"
+                android:background="@drawable/border_default"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:maxLength="1"
+                android:textStyle="bold"
+                android:inputType="number"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"/>
+
+            <EditText
+                android:id="@+id/pin_6"
+                android:background="@drawable/border_default"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:maxLength="1"
+                android:textStyle="bold"
+                android:inputType="number"
+                android:layout_marginLeft="4dp"/>
+
+        </LinearLayout>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/linearLayoutButton"
@@ -73,7 +138,7 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etOtp">
+            app:layout_constraintTop_toBottomOf="@+id/layoutPin">
 
             <FrameLayout
                 android:layout_width="0dp"
@@ -175,5 +240,18 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:translationZ="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
