--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,114 +40,274 @@
             android:textSize="18dp"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <com.example.capstoneproject.ui.customView.nameEditText
-            android:id="@+id/etFirstName"
-            android:focusable="false"
-            style="@style/EditText"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutFirstName"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:hint="First Name"
-            android:imeOptions="actionNext"
-            android:textSize="14sp"
-            android:textColor="@color/secondaryColor"
+            app:hintTextColor="@color/contentColor"
+            app:boxStrokeColor="@color/contentColor"
+            app:boxStrokeErrorColor="@color/red"
+            app:boxCornerRadiusTopStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusBottomEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" >
 
-        <com.example.capstoneproject.ui.customView.nameEditText
-            android:id="@+id/etLastName"
-            android:focusable="false"
-            style="@style/EditText"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:hint="Last Name"
-            android:imeOptions="actionNext"
-            android:textSize="14sp"
-            android:textColor="@color/secondaryColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etFirstName" />
-
-        <com.example.capstoneproject.ui.customView.emailEditText
-            android:id="@+id/etEmail"
-            android:focusable="false"
-            style="@style/EditText"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:hint="Email"
-            android:imeOptions="actionNext"
-            android:textSize="14sp"
-            android:textColor="@color/secondaryColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etLastName" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilPassword"
-            style="@style/EditTextNoPadding"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:hintEnabled="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etEmail"
-            app:passwordToggleEnabled="true">
-
-            <com.example.capstoneproject.ui.customView.passwordEditText
-                android:id="@+id/etPassword"
-                style="@style/EditTextPassword"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etFirstName"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:focusable="false"
-                android:hint="Password"
+                android:layout_height="match_parent"
                 android:imeOptions="actionNext"
-                android:inputType="textPassword"
                 android:textSize="14sp"
+                android:maxLines="1"
                 android:textColor="@color/secondaryColor" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilConfirmPassword"
-            style="@style/EditTextNoPadding"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:id="@+id/layoutLastName"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="6dp"
             android:layout_marginEnd="16dp"
-            app:hintEnabled="false"
+            android:hint="Last Name"
+            app:hintTextColor="@color/contentColor"
+            app:boxStrokeColor="@color/contentColor"
+            app:boxStrokeErrorColor="@color/red"
+            app:boxCornerRadiusTopStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusBottomEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
-            app:passwordToggleEnabled="true">
+            app:layout_constraintTop_toBottomOf="@+id/layoutFirstName" >
 
-            <com.example.capstoneproject.ui.customView.passwordEditText
-                android:id="@+id/etConfirmPassword"
-                style="@style/EditTextPassword"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etLastName"
                 android:layout_width="match_parent"
-                android:focusable="false"
-                android:layout_height="50dp"
-                android:textSize="14sp"
-                android:textColor="@color/secondaryColor"
+                android:layout_height="match_parent"
                 android:imeOptions="actionNext"
-                android:hint="Confirm Password"
-                android:inputType="textPassword" />
+                android:textSize="14sp"
+                android:maxLines="1"
+                android:textColor="@color/secondaryColor" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutEmail"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="16dp"
+            android:hint="Email"
+            app:hintTextColor="@color/contentColor"
+            app:boxStrokeColor="@color/contentColor"
+            app:boxStrokeErrorColor="@color/red"
+            app:boxCornerRadiusTopStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusBottomEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layoutLastName" >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:textSize="14sp"
+                android:maxLines="1"
+                android:textColor="@color/secondaryColor" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+<!--        <com.example.capstoneproject.ui.customView.nameEditText-->
+<!--            android:id="@+id/etFirstName"-->
+<!--            android:focusable="false"-->
+<!--            style="@style/EditText"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="48dp"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="32dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:hint="First Name"-->
+<!--            android:imeOptions="actionNext"-->
+<!--            android:textSize="14sp"-->
+<!--            android:textColor="@color/secondaryColor"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textView" />-->
+
+<!--        <com.example.capstoneproject.ui.customView.nameEditText-->
+<!--            android:id="@+id/etLastName"-->
+<!--            android:focusable="false"-->
+<!--            style="@style/EditText"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="48dp"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:hint="Last Name"-->
+<!--            android:imeOptions="actionNext"-->
+<!--            android:textSize="14sp"-->
+<!--            android:textColor="@color/secondaryColor"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/layoutFirstName" />-->
+
+<!--        <com.example.capstoneproject.ui.customView.emailEditText-->
+<!--            android:id="@+id/etEmail"-->
+<!--            android:focusable="false"-->
+<!--            style="@style/EditText"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="48dp"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:hint="Email"-->
+<!--            android:imeOptions="actionNext"-->
+<!--            android:textSize="14sp"-->
+<!--            android:textColor="@color/secondaryColor"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/etLastName" />-->
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutPassword"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="16dp"
+            android:hint="Password"
+            app:hintTextColor="@color/contentColor"
+            app:boxStrokeColor="@color/contentColor"
+            app:boxStrokeErrorColor="@color/red"
+            app:boxCornerRadiusTopStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusBottomEnd="8dp"
+            app:passwordToggleEnabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layoutEmail" >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:imeOptions="actionNext"
+                android:inputType="textPassword"
+                android:textSize="14sp"
+                android:maxLines="1"
+                android:textColor="@color/secondaryColor" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutConfirmPassword"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="16dp"
+            android:hint="Confirm Password"
+            app:hintTextColor="@color/contentColor"
+            app:boxStrokeColor="@color/contentColor"
+            app:boxStrokeErrorColor="@color/red"
+            app:boxCornerRadiusTopStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusBottomEnd="8dp"
+            app:passwordToggleEnabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layoutPassword" >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etConfirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:imeOptions="actionNext"
+                android:inputType="textPassword"
+                android:textSize="14sp"
+                android:maxLines="1"
+                android:textColor="@color/secondaryColor" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/layoutPasswords"-->
+<!--            style="@style/EditTextNoPadding"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="48dp"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            app:hintEnabled="false"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/layoutPassword"-->
+<!--            app:passwordToggleEnabled="true">-->
+
+<!--            <com.example.capstoneproject.ui.customView.passwordEditText-->
+<!--                android:id="@+id/etPasswords"-->
+<!--                style="@style/EditTextPassword"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:focusable="false"-->
+<!--                android:hint="Password"-->
+<!--                android:imeOptions="actionNext"-->
+<!--                android:inputType="textPassword"-->
+<!--                android:textSize="14sp"-->
+<!--                android:textColor="@color/secondaryColor" />-->
+
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/layoutConfirmPassword"-->
+<!--            style="@style/EditTextNoPadding"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="48dp"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            app:hintEnabled="false"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/layoutPasswords"-->
+<!--            app:passwordToggleEnabled="true">-->
+
+<!--            <com.example.capstoneproject.ui.customView.passwordEditText-->
+<!--                android:id="@+id/etConfirmPassword"-->
+<!--                style="@style/EditTextPassword"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:focusable="false"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:textSize="14sp"-->
+<!--                android:textColor="@color/secondaryColor"-->
+<!--                android:imeOptions="actionNext"-->
+<!--                android:hint="Confirm Password"-->
+<!--                android:inputType="textPassword" />-->
+
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 <!--        <Button-->
 <!--            android:id="@+id/btnregis"-->
 <!--            android:layout_width="300dp"-->
@@ -170,7 +330,7 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword">
+            app:layout_constraintTop_toBottomOf="@+id/layoutConfirmPassword">
 
             <FrameLayout
                 android:layout_width="0dp"
