--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -26,22 +26,37 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <com.example.capstoneproject.ui.customView.emailEditText
-            android:id="@+id/etEmail"
-            android:focusable="false"
-            style="@style/EditText"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutEmail"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="6dp"
             android:layout_marginEnd="16dp"
             android:hint="Email"
-            android:imeOptions="actionNext"
-            android:textSize="14sp"
-            android:textColor="@color/secondaryColor"
+            app:hintTextColor="@color/contentColor"
+            app:boxStrokeColor="@color/contentColor"
+            app:boxStrokeErrorColor="@color/red"
+            app:boxCornerRadiusTopStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusBottomEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewlogin" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewlogin" >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:textSize="14sp"
+                android:maxLines="1"
+                android:textColor="@color/secondaryColor" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/textView2"
@@ -67,7 +82,7 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etEmail">
+            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">
 
             <FrameLayout
                 android:layout_width="0dp"
